--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,8 +1,8 @@
 @import './color-variables.scss';
 
 .header {
-  background: $gray;
-  opacity: 0.7;
+  // rgba of $grey
+  background: rgba(33, 37, 41, 0.7);
   position: fixed;
   top: 0;
   left: 0;
@@ -64,6 +64,26 @@
   }
 }
 
-.logo {
+.logoContainer {
   width: 10%;
 }
+
+.logoBox {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  padding: 5px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+}
+
+.logoItem {
+  margin-left: 3px;
+  margin-top: 2px;
+
+  path {
+    fill: white;
+  }
+}
+
+
