--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -8,7 +8,7 @@
   left: 0;
   right: 0;
   z-index: 999;
-  padding: 20px 0;
+  padding: 15px 0;
   font-size: 16px;
 }
 
@@ -30,16 +30,41 @@
   align-items: center;
   justify-content: flex-end;
 
+  @media only screen and (max-width:767px) {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    bottom: 0;
+    width: 100%;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+    padding: 80px 0 0;
+    transition: right .3s;
+  }
+
   ul {
     padding: 0;
     display: flex;
     margin: 0;
     justify-content: flex-end;
     list-style: none;
+
+    @media screen and (max-width:767px) {
+      flex-wrap: wrap;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      justify-content: flex-start;
+    }
   }
 
   li {
     margin: 0 10px;
+
+    @media screen and (max-width:767px) {
+      margin: 0;
+    }
   }
 
   a {
@@ -61,11 +86,39 @@
       background: #fff;  
       transition: width 0.4s;
     }
+
+    @media screen and (max-width:767px) {
+      padding: 6px 20px;
+      display: inline-block;
+      width: 100%;
+      border-bottom: 1px solid #fff;
+      box-sizing: border-box;
+      font-size: 14px;
+      font-weight: 600;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+      }
+      &:hover:after {
+        width: 0%;
+      }
+    }
+  }
+}
+
+.responsiveMenuOpen .menu {
+  @media only screen and (max-width:767px) {
+    right: 0;
   }
 }
 
 .logoContainer {
   width: 10%;
+  z-index: 9999;
+
+  @media only screen and (max-width:767px) {
+    width: calc(100% - 53px);
+  }
 }
 
 .logoBox {
@@ -86,4 +139,18 @@
   }
 }
 
+.menuToggle {
+  z-index: 9999;
+  display: none;
+  @media only screen and (max-width:767px) {
+    display: block;
+  }
+}
 
+.menuToggleButton {
+  background: transparent;
+  padding: 15px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
