--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -149,7 +149,7 @@
 
 .menuToggleButton {
   background: transparent;
-  padding: 15px;
+  padding: 10px 15px;
   cursor: pointer;
   border: none;
   outline: none;
