--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,3 +3,11 @@
 * {
   font-family:'Josefin Sans',sans-serif
 }
+
+
+body.modal-open {
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+}
