--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -1,7 +1,86 @@
-@import './color-variables.scss';
+@import './mixins.scss';
 
 
 .landing {
   position: relative;
-  height: 2000px;
+  height: 100vh;
+
+  &:after {
+    content: "";
+    background: rgba(0, 0, 0, 0.70);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+}
+
+.hero {
+  height: 100vh;
+  width: 100%;
+}
+
+.bannerInfo {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  color: white;
+  text-align: center;
+  z-index: 9;
+  min-width: 766px;
+}
+
+.bannerIntroText {
+  font-size: 25px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  @include text-shadow;
+}
+
+.bannerSubText {
+  font-size: 30px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  @include text-shadow;
+}
+
+.heading {
+  font-size: 80px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 1.1px;
+  @include text-shadow;
+}
+
+.bannerList {
+  padding: 0;
+  display: flex;
+  list-style: none;
+  margin: 0 0 30px;
+  justify-content: center;
+
+  li {
+    padding: 0 15px;
+    position: relative;
+    font-size: 16px;
+    @include text-shadow;
+
+    &:not(:last-child):after {
+      content: "";
+      width: 6px;
+      height: 6px;
+      display: inline-block;
+      background: #fff;
+      position: absolute;
+      top: 50%;
+      margin-top: -3px;
+      right: -3px;
+      border-radius: 50%;
+      scale: 1 !important;
+    }
+  }
 }
