--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -104,3 +104,52 @@
     }
   }
 }
+
+.social {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  justify-content: center;
+
+  li {
+    margin: 0 10px;
+  }
+
+  a {
+    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #fff;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+
+    &:before {
+      z-index: 1;
+    }
+
+    &:after {
+      content: "";
+      background: #ef5826;
+      position: absolute;
+      top: -100%;
+      left: 0;
+      -webkit-transition: all .3s;
+      transition: all .3s;
+      height: 100%;
+      width: 100%;
+    }
+
+    &:hover:after {
+      top: 0;
+    }
+  }
+}
+
+.hidden {
+  display: none;
+}
