--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -94,7 +94,7 @@
       width: 6px;
       height: 6px;
       display: inline-block;
-      background: #fff;
+      background: $white;
       position: absolute;
       top: 50%;
       margin-top: -3px;
@@ -103,53 +103,4 @@
       scale: 1 !important;
     }
   }
-}
-
-.social {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  justify-content: center;
-
-  li {
-    margin: 0 10px;
-  }
-
-  a {
-    text-decoration: none;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #fff;
-    color: #fff;
-    position: relative;
-    overflow: hidden;
-
-    &:before {
-      z-index: 1;
-    }
-
-    &:after {
-      content: "";
-      background: #ef5826;
-      position: absolute;
-      top: -100%;
-      left: 0;
-      -webkit-transition: all .3s;
-      transition: all .3s;
-      height: 100%;
-      width: 100%;
-    }
-
-    &:hover:after {
-      top: 0;
-    }
-  }
-}
-
-.hidden {
-  display: none;
 }
