--- a/src/styles/color-variables.scss
+++ b/src/styles/color-variables.scss
@@ -2,6 +2,8 @@ $black: #000;
 $white: #fff;
 
 $grayHeader: #363636;
+$lightestGray: #fafafe;
+$lightGray: #cecece;
 $gray: #212529;
 $medGray: #333333;
 
