--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -3,3 +3,57 @@
 @mixin text-shadow {
   text-shadow: 1px 1px 4px $grayHeader;
 }
+
+@mixin section-header {
+  margin-bottom: 10px;
+  font-weight: 500;
+  display: block;
+  position: relative;
+
+  &:after {
+    content: "";
+    width: 25px;
+    height: 1px;
+    display: inline-block;
+    position: absolute;
+    background: $orange;
+    top: 100%;
+    left: 0;
+  }
+}
+
+@mixin section-wrapper {
+  padding: 50px;
+
+  @media screen and (max-width: 767px) {
+    padding: 50px 20px;
+  }
+}
+
+@mixin section-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+@mixin card {
+  text-align: center;
+  padding: 30px;
+  background: #fff;
+}
+
+@mixin card-shadow {
+  @include card;
+  box-shadow: 3px 3px 8px 2px rgba(0,0,0,.04);
+  -webkit-box-shadow: 3px 3px 8px 2px rgba(0,0,0,.04);
+  transition: box-shadow .5s;
+  -webkit-transition: box-shadow .5s;
+}
+
+@mixin card-shadow-hover {
+
+  @include card-shadow;
+  &:hover {
+    -webkit-box-shadow: 3px 3px 8px 2px rgba(0,0,0,.17); 
+    box-shadow: 3px 3px 8px 2px rgba(0,0,0,.17);
+  }
+}
