--- a/src/styles/skills.module.scss
+++ b/src/styles/skills.module.scss
@@ -14,7 +14,7 @@
   justify-content: space-between;
   margin: 20px 0;
 
-  @media only screen and (max-width:900px) {
+  @media only screen and (max-width:767px) {
     flex-direction: column;
   }
 
@@ -29,7 +29,7 @@
 
   width: 30%;
 
-  @media only screen and (max-width:900px) {
+  @media only screen and (max-width:767px) {
     width: 100%;
     margin: 5px 0;
   }
@@ -37,5 +37,13 @@
 
 .cardTitle {
   font-size: 22px;
+  font-weight: 500;
   position: relative;
+}
+
+.cardDescription {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  margin-bottom: 0;
 }
