--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -61,7 +61,7 @@
   }
 
   li {
-    margin: 0 10px;
+    margin: 0 20px;
 
     @media screen and (max-width:767px) {
       margin: 0;
@@ -69,7 +69,6 @@
   }
 
   a {
-    color: $white;
     text-decoration: none;
     position: relative;
 
@@ -105,6 +104,15 @@
       }
     }
   }
+
+  button {
+    color: $white;
+    background: transparent;
+    width: 100%;
+    cursor: pointer;
+    border: none;
+    padding: 0;
+  }
 }
 
 .responsiveMenuOpen .menu {
@@ -117,6 +125,14 @@
 .logoContainer {
   width: 10%;
   z-index: 9999;
+
+  button {
+    background: transparent;
+    cursor: pointer;
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
 
   @media only screen and (max-width:767px) {
     width: calc(100% - 53px);
