Added Blog Functionality

--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -50,7 +50,7 @@
 
 .details {
   list-style: none;
-  border-top: 1px solid #000;
+  border-top: 1px solid $black;
   padding: 30px 0 0;
   margin-bottom: 30px;
   margin-left: 0;
