--- a/src/styles/blog.module.scss
+++ b/src/styles/blog.module.scss
@@ -6,10 +6,16 @@
   min-height: calc(100vh - 66px);
   margin-top: 83px;
   padding-top: 20px;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 20px;
+  }
 }
 
 .container {
   @include section-container;
+
+  display: flex;
 }
 
 .titlePhoto {
@@ -18,4 +24,37 @@
   @media screen and (max-width: 767px) {
     height: 300px;
   }
+}
+
+.featuredBlogs {
+  min-width: 150px;
+  margin-left: 20px;
+
+  a {
+    display: block;
+    @include link;
+    @include truncate-text;
+
+    color: $medGray;
+    transition: color 0.5s;
+    margin-bottom: 5px;
+
+    &:hover {
+      color: $orange;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    display: none;
+  }
+}
+
+.featuredTitle {
+  font-weight: 500;
+}
+
+
+.calendarIcon {
+  margin-right: 5px;
+  font-size: 14px;
 }
