--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -57,3 +57,29 @@
     box-shadow: 3px 3px 8px 2px rgba(0,0,0,.17);
   }
 }
+
+@mixin truncate-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@mixin link {
+  text-decoration: none;
+  position: relative;
+
+  &:hover:after {
+    width: 100%;
+  }
+
+  &:after {
+    content: "";
+    width: 0;
+    height: 1px;
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    background: $white;  
+    transition: width 0.4s;
+  }
+}
