--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600,700,700i&display=swap');
 
 * {
-  font-family:'Josefin Sans',sans-serif
+  font-family:'Josefin Sans',sans-serif;
 }
 
 .using-mouse {
