Updated styles of blogs

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -30,6 +30,11 @@
   }
 }
 
+@mixin section-wrapper-alternate {
+  @include section-wrapper;
+  background-color: $lightestGray;
+}
+
 @mixin section-container {
   max-width: 1140px;
   margin: 0 auto;
