--- a/src/styles/blog.module.scss
+++ b/src/styles/blog.module.scss
@@ -31,6 +31,7 @@
   min-width: 150px;
   width: 150px;
   margin-left: 20px;
+  
 
   a {
     display: block;
@@ -82,6 +83,17 @@
   
   p {
     font-size: 16px;
+  }
+
+  a {
+    @include link;
+    color: $orange;
+    transition: all 0.3s;
+    position: relative;
+
+    &:after {
+      background: $orange;  
+    }
   }
 }
 
