--- a/src/styles/skills.module.scss
+++ b/src/styles/skills.module.scss
@@ -1,8 +1,7 @@
 @import './mixins.scss';
 
 .wrapper {
-  @include section-wrapper;
-  background-color: $lightestGray;
+  @include section-wrapper-alternate;
 }
 
 .container {
