--- a/src/styles/blog.module.scss
+++ b/src/styles/blog.module.scss
@@ -7,7 +7,7 @@
   margin-top: 83px;
   padding-top: 20px;
 
-  @media screen and (max-width: 767px) {
+  @include tablet {
     padding-top: 20px;
   }
 }
@@ -22,7 +22,7 @@
   height: 400px;
   margin-bottom: 20px;
 
-  @media screen and (max-width: 767px) {
+  @include tablet {
     height: 300px;
   }
 }
