--- a/src/styles/blogspage.module.scss
+++ b/src/styles/blogspage.module.scss
@@ -8,7 +8,7 @@
   padding-top: 20px;
   padding-bottom: 0;
 
-  @media screen and (max-width: 767px) {
+  @include tablet {
     padding-top: 20px;
   }
 }
