--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -31,11 +31,11 @@
   z-index: 9;
   min-width: 766px;
 
-  @media screen and (max-width:767px) {
+  @include tablet {
     min-width: 474px;
   }
 
-  @media screen and (max-width:475px) {
+  @include phone {
     min-width: auto;
   }
 }
@@ -53,7 +53,7 @@
   font-weight: 400;
   @include text-shadow;
 
-  @media screen and (max-width:475px) {
+  @include phone {
     font-size: 20px;
   }
 }
@@ -67,11 +67,11 @@
   letter-spacing: 1.1px;
   @include text-shadow;
 
-  @media screen and (max-width:767px) {
+  @include tablet {
     font-size: 50px;
   }
 
-  @media screen and (max-width:475px) {
+  @include phone {
     font-size: 30px;
   }
 }
