--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,5 @@
 @import './color-variables.scss';
+@import './media-queries.scss';
 
 @mixin text-shadow {
   text-shadow: 1px 1px 4px $grayHeader;
@@ -25,7 +26,7 @@
 @mixin section-wrapper {
   padding: 50px;
 
-  @media screen and (max-width: 767px) {
+  @include tablet {
     padding: 50px 20px;
   }
 }
