--- a/src/styles/blogs.module.scss
+++ b/src/styles/blogs.module.scss
@@ -13,27 +13,11 @@
 }
 
 .blogsList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0;
+  @include photo-list;
 }
 
 .blog {
-  list-style: none;
-  width: calc(33.33% - 5px);
-  height: 250px;
-  position: relative;
-  margin-bottom: 10px;
-
-  @include tablet {
-    width: calc(50% - 5px);
-    height: 200px;
-  }
-
-  @include phone {
-    width: 100%;
-  }
+  @include photo-list-item;
 
   &:nth-child(1),
   &:nth-child(2) {
@@ -42,11 +26,9 @@
 
     @include tablet {
       height: 200px;
-    }
-
-    @include tablet {
       width: 100%;
     }
+
   }
 
   &:after {
@@ -61,10 +43,7 @@
 }
 
 .blogLink {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
+  @include photo-list-item-link;
 }
 
 .blogInfo {
@@ -95,16 +74,7 @@
 }
 
 .inner {
-  height: 100%;
-
-  img {
-    // important needed here
-    transition: all 0.3s !important;
-  }
-
-  &:hover img {
-    transform: scale(1.1);
-  }
+  @include photo-list-transition;
 }
 
 .imageWrapper {
