--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -2,6 +2,12 @@ $phone-width: 475px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 
+@mixin desktop {
+  @media screen and (max-width: $desktop-width) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media screen and (max-width: $tablet-width) {
     @content;
