--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -89,3 +89,48 @@
     transition: width 0.4s;
   }
 }
+
+@mixin photo-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+}
+
+@mixin photo-list-item {
+  list-style: none;
+  width: calc(33.33% - 5px);
+  height: 250px;
+  position: relative;
+  margin-bottom: 10px;
+
+  @include desktop {
+    width: calc(50% - 5px);
+    height: 200px;
+  }
+
+  @include tablet {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+@mixin photo-list-transition {
+  height: 100%;
+
+  img {
+    // important needed here
+    transition: all 0.3s !important;
+  }
+
+  &:hover img {
+    transform: scale(1.1);
+  }
+}
+
+@mixin photo-list-item-link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+}
