--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -1,5 +1,6 @@
+$phone-small-width: 321px;
 $phone-width: 475px;
-$tablet-width: 768px;
+$tablet-width: 767px;
 $desktop-width: 1024px;
 
 @mixin desktop {
@@ -16,6 +17,12 @@ $desktop-width: 1024px;
 
 @mixin phone {
   @media screen and (max-width: $phone-width) {
+    @content;
+  }
+}
+
+@mixin phone-small {
+  @media screen and (max-width: $phone-small-width) {
     @content;
   }
 }
