--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -8,6 +8,7 @@
 @mixin section-header {
   margin-bottom: 10px;
   font-weight: 500;
+  line-height: 1.2;
   display: block;
   position: relative;
 
