Styled H4 tags in Blog

--- a/src/styles/blog.module.scss
+++ b/src/styles/blog.module.scss
@@ -80,6 +80,11 @@
     line-height: 26px;
     margin-bottom: 20px;
   }
+
+  h4 {
+    font-weight: 600;
+    font-size: 16px;
+  }
   
   p {
     font-size: 16px;
