Added React Slick and Testimonials Component

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -5,7 +5,13 @@
 }
 
 .using-mouse {
-  button, input, textarea {
+  button, input, textarea, div {
     outline: none;
   }
 }
+
+// .slick-track {
+//   div {
+//     outline: none !important;
+//   }
+// }
