--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -42,6 +42,10 @@
 
 .heading {
   @include section-header;
+
+  @include phone {
+    text-align: left;
+  }
 }
 
 .description {
@@ -63,11 +67,6 @@
 
     @include phone {
       font-size: 14px;
-    }
-
-    @include phone-small {
-      display: block;
-      text-align: center;
     }
 
     strong {
