--- a/src/styles/testimonials.module.scss
+++ b/src/styles/testimonials.module.scss
@@ -6,8 +6,40 @@
 
 .container {
   @include section-container;
+  text-align: center;
 }
 
 .heading {
   @include section-header;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.subHeading {
+  font-size: 14px;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  margin: 0 auto 20px;
+}
+
+.content {
+  font-size: 14px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.name {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.relationship {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  display: block;
 }
