--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -6,8 +6,38 @@
 
 .container {
   @include section-container;
+  text-align: center;
 }
 
 .heading {
   @include section-header;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.form {
+  margin-top: 20px;
+  max-width: 700px;
+  margin: 0 auto;
+  text-align: left;
+
+  input {
+    display: block;
+    width: 100%;
+    padding: 5px 10px;
+    border: 1px solid hsla(0,0,80,.37);
+  }
+
+  textarea {
+    padding: 5px 10px;
+    width: 100%;
+    display: block;
+    height: 100px;
+    resize: none;
+    border: 1px solid hsla(0,0,80,.37);
+  }
+}
+
+.hidden {
+  display: none;
 }
